--- a/ex_bootstrap_spacex_humanflight.html
+++ b/ex_bootstrap_spacex_humanflight.html
@@ -82,8 +82,8 @@
           data-aos-duration="2000"
         >
           <img
-            src="../ex_bootstrap_spacex/sass/IMG/home/arrowDown.gif"
-            alt=""
+            src="./sass/IMG/home/arrowDown.gif"
+            alt="arrow down gift"
             class="arrowDown"
           />
         </a>
