--- a/humanflight.html
+++ b/humanflight.html
@@ -49,7 +49,7 @@
                     <a
                       class="nav-link active"
                       aria-current="page"
-                      href="./ex_bootstrap_spacex_falcon9.html"
+                      href="falcon9.html"
                       id="button-header"
                       >FALCON9</a
                     >
@@ -58,7 +58,7 @@
                     <a
                       class="nav-link active"
                       aria-current="page"
-                      href="./ex_bootstrap_spacex_humanflight.html"
+                      href="humanflight.html"
                       id="button-header"
                       >HUMAN SPACES FLIGHT</a
                     >
