--- a/falcon9.html
+++ b/falcon9.html
@@ -25,7 +25,7 @@
         <header class="header">
           <nav class="navbar navbar-expand-lg bg-transparent navbar-dark pt-4">
             <div class="container">
-              <a href="/ex_bootstrap_spacex_home.html">
+              <a href="index.html">
                 <img
                   src="./sass/IMG/SpaceXLogo.svg"
                   class="img-fluid logoPc"
@@ -49,7 +49,7 @@
                     <a
                       class="nav-link active"
                       aria-current="page"
-                      href="./ex_bootstrap_spacex_falcon9.html"
+                      href="falcon9.html"
                       id="button-header"
                       >FALCON9</a
                     >
@@ -58,7 +58,7 @@
                     <a
                       class="nav-link active"
                       aria-current="page"
-                      href="./ex_bootstrap_spacex_humanflight.html"
+                      href="humanflight.html"
                       id="button-header"
                       >HUMAN SPACES FLIGHT</a
                     >
