--- a/falcon9.html
+++ b/falcon9.html
@@ -521,7 +521,7 @@
         target="_blank"
         >Linkedin</a
       >
-      <a href="https://github.com/cunhanik" class="me-4" target="_blank"
+      <a href="https://github.com/ClaudioCunhaDev" class="me-4" target="_blank"
         >Github</a
       >
       <a
