--- a/humanflight.html
+++ b/humanflight.html
@@ -202,7 +202,7 @@
         target="_blank"
         >Linkedin</a
       >
-      <a href="https://github.com/cunhanik" class="me-4" target="_blank"
+      <a href="https://github.com/ClaudioCunhaDev" class="me-4" target="_blank"
         >Github</a
       >
       <a
